<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SupCrowdFunder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login</string>
	<string name="mail">Login/Mail :  </string>
	<string name="password">Password :</string>
	<string name="firstname">First Name :</string>
	<string name="lastname">Last Name :</string>
	<string name="address">Address :</string>
	<string name="Login">Login</string>
    <string name="title_activity_list_project">ListProject</string>
    <string name="emptydesc" />
    <string name="projecttitle">Projectname</string>
    <string name="title_activity_projectby_id">ProjectbyId</string>
    <string name="category">Category</string>
    <string name="sign_up">Sign up</string>
    <string name="create_project">Create project</string>
    <string name="nameProject">Project Name</string>
    <string name="descriptionProject">Description</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="goal">Goal</string>
    <string name="fund">Fund</string>
    <string name="nb_contrib">Nb contrib</string>
    <string name="creator">Creator</string>
    
</resources>
