<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProjectbyId" >

    <ImageView
        android:id="@+id/ivImageProjectbyId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvProjectbyIdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivImageProjectbyId"
        android:layout_alignLeft="@+id/tvProjectbyIdDescription"
        android:text="Project Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
	<TextView
        android:id="@+id/tvProjectbyIdDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProjectbyIdEndDate"
        android:layout_below="@+id/tvProjectbyIdName"
        android:layout_marginTop="23dp"
        android:text="Project Descritpion"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvProjectbyIdStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProjectbyIdDescription"
        android:layout_below="@+id/tvProjectbyIdDescription"
        android:layout_marginTop="15dp"
        android:text="@string/startDate" />

    <TextView
        android:id="@+id/tvProjectbyIdEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rgRewards"
        android:layout_below="@+id/tvProjectbyIdStartDate"
        android:text="@string/endDate" />

    <TextView
        android:id="@+id/tvProjectbyIdGoal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProjectbyIdEndDate"
        android:layout_below="@+id/tvProjectbyIdEndDate"
        android:text="@string/goal" />

    <TextView
        android:id="@+id/tvProjectbyIdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvProjectbyIdGoal1"
        android:layout_alignTop="@+id/tvProjectbyIdEndDate"
        android:layout_toRightOf="@+id/tvProjectbyIdName" />

    <TextView
        android:id="@+id/tvProjectbyIdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvProjectbyIdEnd"
        android:layout_alignTop="@+id/tvProjectbyIdStartDate"
        android:layout_toRightOf="@+id/tvProjectbyIdName" />

    <TextView
        android:id="@+id/tvProjectbyIdGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvProjectbyIdGoal1"
        android:layout_alignLeft="@+id/tvProjectbyIdEnd"
        android:layout_alignTop="@+id/tvProjectbyIdGoal1" />
    
    <TextView
        android:id="@+id/tvProjectbyIdCurrentFund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvProjectbyIdCurrentFund1"
        android:layout_alignLeft="@+id/tvProjectbyIdGoal"
        android:layout_alignTop="@+id/tvProjectbyIdCurrentFund1" />
    
    <TextView
        android:id="@+id/tvProjectbyIdNbContrib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvProjectbyIdNbContrib1"
        android:layout_alignLeft="@+id/tvProjectbyIdCurrentFund"
        android:layout_alignTop="@+id/tvProjectbyIdNbContrib1" />
    
    <TextView
        android:id="@+id/tvProjectbyIdCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvProjectbyIdCat1"
        android:layout_alignLeft="@+id/tvProjectbyIdNbContrib"
        android:layout_alignTop="@+id/tvProjectbyIdCat1" />
    
    <TextView
        android:id="@+id/tvProjectbyIdCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvProjectbyIdCreator1"
        android:layout_alignLeft="@+id/tvProjectbyIdCat"
        android:layout_alignTop="@+id/tvProjectbyIdCreator1" />

    <Button
        android:id="@+id/btnAddContribution"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ivImageProjectbyId"
        android:layout_below="@+id/tvProjectbyIdGoal"
        android:layout_marginTop="111dp"
        android:text="Add" />

    <RadioGroup
        android:id="@+id/rgRewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProjectbyIdCurrentFund1"
        android:layout_alignTop="@+id/btnAddContribution"
        android:layout_marginTop="14dp" >

        <RadioButton
            android:id="@+id/rbtnReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RadioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvProjectbyIdCurrentFund1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvProjectbyIdGoal1"
        android:text="@string/fund" />

    <TextView
        android:id="@+id/tvProjectbyIdNbContrib1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProjectbyIdCurrentFund1"
        android:layout_below="@+id/tvProjectbyIdCurrentFund1"
        android:text="@string/nb_contrib" />
    
    <TextView
        android:id="@+id/tvProjectbyIdCat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProjectbyIdNbContrib1"
        android:layout_below="@+id/tvProjectbyIdNbContrib1"
        android:text="@string/category" />
    
    <TextView
        android:id="@+id/tvProjectbyIdCreator1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProjectbyIdCat1"
        android:layout_below="@+id/tvProjectbyIdCat1"
        android:text="@string/creator" />

</RelativeLayout>